Edited credits page

--- a/SSD-Alkolq/Pages/Credits.cshtml
+++ b/SSD-Alkolq/Pages/Credits.cshtml
@@ -44,5 +44,5 @@
 </div>
 
 <p class="text-center m-5">
-    Special thanks to Mr Saifu, our teacher who guide us through how to copy razor pages code from a word document (luckily google is a thing now).
+    Special thanks to Mr Saifu, our teacher who taught us all the required knowledge we needed to do this project. Also, special thanks for all the materials that were provided to us by the school.
 </p>
