--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -68,6 +68,13 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit</a> |
+    @if (User.Identity.IsAuthenticated)
+    {
+        @if (User.IsInRole("Admin"))
+        {
+            <a asp-page="./Delete" asp-route-id="@Model.AlcoholProduct.ID">Delete </a> 
+        } 
+    } |
     <a asp-page="./Index">Back to List</a>
 </div>
 
