--- a/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
@@ -9,12 +9,21 @@
 
 <form class="m-4">
     <div class="form-row align-items-center justify-content-center">
-        <div class="col-sm-3 my-1">
+        <div class="col-sm-2 my-1">
+            @if (User.Identity.IsAuthenticated)
+            {
+                @if (User.IsInRole("Admin"))
+                {
+                    <a asp-page="./Create" asp-route-id="Model.AlcoholProduct.ID">Add </a>
+                }
+            }
+        </div>
+        <div class="col-sm-2 my-1">
             <select asp-for="AlcoholType" asp-items="Model.Type" class="custom-select">
                 <option value="" selected>All</option>
             </select>
         </div>
-        <div class="col-sm-6 my-1">
+        <div class="col-sm-5 my-1">
             <label class="sr-only" for="search">Search</label>
             <input type="text" class="form-control" id="search" asp-for="SearchString" placeholder="Search">
         </div>
