--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -67,14 +67,14 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit</a> |
     @if (User.Identity.IsAuthenticated)
     {
-        @if (User.IsInRole("Admin"))
+        @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
         {
-            <a asp-page="./Delete" asp-route-id="@Model.AlcoholProduct.ID">Delete </a> 
+            <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit |</a> 
+            <a asp-page="./Delete" asp-route-id="@Model.AlcoholProduct.ID">Delete |</a> 
         } 
-    } |
+    }
     <a asp-page="./Index">Back to List</a>
 </div>
 
